Work on update bugs in navigator item host...
This implementation sucks honestly. I'm spending too much time fussing and I fear that taking a dependency on Knockout.js for representing the core object model data will not scale. So I'm going to be brave and double down on the navigator concept. What's required is to cleanly seperate MVVM from the larger, pure object model state the navigator is ultimately supposed to help _view_. The current implementation conflates MVVM and the core data model (in fact couples them by taking a dependency on Knockout.js). Additional details in subsequent commit comments.

--- a/client/app/css/schema-navigator-window.css
+++ b/client/app/css/schema-navigator-window.css
@@ -86,19 +86,19 @@ color: rgba(0,0,0,0.5);
 
 /* mutable namespace member header row style */
 .classNavigatorItemNamespaceMutableHeader {
-background-color: rgba(0,200,255,0.3);
+background-color: rgba(0,200,255,0.5);
 color: rgba(255,255,255,1);
 }
 
 /* mutable namespace member table row (summary row) style */
 .classNavigatorItemNamespaceMutableMember {
-background-color: rgba(0,200,255,0.5);
+background-color: rgba(0,200,255,0.3);
 color: rgba(255,255,255,0.75);
 }
 
 /* mutable namespace member table row (edit row) style */
 .classNavigatorItemNamespaceMutableMemberEdit {
-background-color: rgba(0,0,0,0.1);
+background-color: rgba(0,200,255,0.3);
 }
 
 /* mutable namespace member edit row containing DIV style */
